syntax = "proto3";

package server;

option go_package = "main.Auth.v1;Auth";

service Auth {
    rpc Register (RegRequest) returns (RegResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}
message RegRequest {
    string email = 1;
    string password = 2;
    string phoneNumber  = 3;
    string gender = 4;
}
message RegResponse {
    int64 userId = 1;
}
message LoginRequest {
    string email = 1;
    string password = 2;
    string phoneNumber  = 3;
    string gender = 4;
    int64 userId = 5;
}
message LoginResponse{
    string jwt = 1;
}